# pages

./: LICENSE  README.md  pyproject.toml
pages/: .signals.py.swo  apps.py  mixins.py  models.py  signals.py  urls.py  views.py  wagtail_hook.py
pages/migrations/: 0001_initial.py  0002_homepage_date_homepage_icon_homepagerelatedlink.py  0003_homeindexpage.py  0004_homepage_intro.py  0005_homeindexpage_require_registration_and_more.py  0006_methodpage_methodpagetag_methodpage_tags.py  0007_alter_methodpage_how.py  0008_alter_homeindexpage_options_alter_homepage_options_and_more.py  0009_homepage_search_image_methodpage_search_image.py  0010_alter_homeindexpage_options_homepage_card_subtitle_and_more.py  0010_homepage_card_subtitle_homepage_card_title.py  0011_remove_homepage_search_image_and_more.py  0012_delete_seopagemixin.py
pages/templates/pages/: base.html  blog_index_page.html  blog_page.html  home_index_page.html  home_page.html  method_page.html
pages/templatetags/: frontpage.py
