[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
reproducible = false

[tool.hatch.build.targets.wheel]
packages = ["pages/"]

[project]
name = "pramari-pages"
version = "0.9"
authors = [
  { name="Andreas Neumeier", email="andreas@neumeier.org" },
]
description = "Wagtail based pages in pramari.de"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "wagtail",
  "wagtail-metadata",
  "mastodon.py",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://www.pramari.de"
"Bug Tracker" = "https://github.com/pramari/apc/issues"
